--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "interactive note board",
   "main": "app.js",
   "scripts": {
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,5 +30,15 @@
   "homepage": "https://github.com/PushkarevAR/note-board#readme",
   "dependencies": {
     "sortablejs": "^1.14.0"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.3.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.3.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.55.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
   }
 }
